# neuronum

./: CMakeLists.txt  LICENSE  README.md  Report.md
include/: Activation.h  Dataloader.h  Dense.h  Layer.h  Matrix.h  Network.h
src/: Activation.cpp  Dataloader.cpp  Dense.cpp  Matrix.cpp  Network.cpp
test/: main.cpp
